# Chip-8

./: .gitignore  CMakeLists.txt  main.c
include/: chip8.h  emulator.h  io.h
src/: chip8.c  chip8_handlers.c  emulator.c  io.c
tests/src/: test_chip8_handlers.c
